# human_machine_interface

./: .gitignore  CMakeLists.txt  README.md
Documentation/: .~lock.TFG-Yolanda(v7).docx#  UMLDiagram.dia
human_machine_interface/: CMakeLists.txt  CMakeLists2.txt  README  README.md  package.xml
human_machine_interface/data/: pelican.ply
human_machine_interface/include/human_machine_interface/: cameramainoption.h  cameraoneoption.h  communication_definition.h  connection.h  data_plot.h  dinamicsview.h  gridcameraoption.h  imagesreceiver.h  mainwindow.h  odometryStateReceiver.h  parametertemporalseries.h  perceptionview.h  processmonitor.h  sceneManager.h  sixcameraoption.h  sphereview.h  supervisor.h  telemetryStateReceiver.h  uavScene.h  usercommander.h
human_machine_interface/launch/: hmi.launch
human_machine_interface/src/: cameradisplayoption.cpp  cameramainoption.cpp  cameraoneoption.cpp  communicationconsole.cpp  connection.cpp  data_plot.cpp  dinamicsview.cpp  fourcameraoption.cpp  gridcameraoption.cpp  imagesreceiver.cpp  main.cpp  mainwindow.cpp  missionStateReceiver.cpp  odometryStateReceiver.cpp  parametertemporalseries.cpp  perceptionview.cpp  processmonitor.cpp  rosGraphReceiver.cpp  sceneManager.cpp  sixcameraoption.cpp  sphereview.cpp  supervisor.cpp  telemetryStateReceiver.cpp  uavScene.cpp  usercommander.cpp
human_machine_interface/src/controller/include/: behaviour_manager_viewer.h  behaviour_viewer.h  camera_display_option.h  camera_grid_option.h  camera_main_option.h  cameradisplayoption.h  cameraoneoption.h  communication_console.h  communication_definition.h  communicationconsole.h  connection.h  control_panel.h  data_plot.h  fourcameraoption.h  images_receiver.h  main_window.h  mainwindow.h  missionStateReceiver.h  mission_state_receiver.h  odometry_state_receiver.h  parameter_temporal_series.h  perception_scene.h  performance_monitor.h  performance_monitor_viewer.h  process_monitor.h  processmonitor.h  rosGraphReceiver.h  ros_graph_receiver.h  sphere_view.h  telemetryStateReceiver.h  telemetry_state_receiver.h  user_commander.h  vehicle_view.h
human_machine_interface/src/controller/source/: behaviour_manager_viewer.cpp  behaviour_viewer.cpp  camera_display_option.cpp  camera_grid_option.cpp  camera_main_option.cpp  cameradisplayoption.cpp  cameraoneoption.cpp  communication_console.cpp  communicationconsole.cpp  connection.cpp  control_panel.cpp  data_plot.cpp  fourcameraoption.cpp  images_receiver.cpp  imagesreceiver.cpp  main.cpp  main_window.cpp  mainwindow.cpp  missionStateReceiver.cpp  missionStatusReceiver.cpp~  mission_state_receiver.cpp  odometryStateReceiver.cpp  odometry_state_receiver.cpp  parameter_temporal_series.cpp  parametertemporalseries.cpp  perception_scene.cpp  perceptionscene.cpp  perceptionscene.h  performance_monitor.cpp  performance_monitor_viewer.cpp  processmonitor.cpp  rosGraphReceiver.cpp  ros_graph_receiver.cpp  sphere_scene.cpp  sphere_view.cpp  sphereview.cpp  telemetryStateReceiver.cpp  telemetry_state_receiver.cpp  uavScene.cpp  user_commander.cpp  (+2 more)
human_machine_interface/src/view/: ui_cameradisplayoption.h  ui_cameragridoption.h  ui_cameramainoption.h  ui_cameraoneoption.h  ui_communicationconsole.h  ui_connection.h  ui_fourcameraoption.h  ui_gridcameraoption.h  ui_mainwindow.h  ui_parametertemporalseries.h  ui_perceptionview.h  ui_processmonitor.h  ui_sixcameraoption.h
human_machine_interface/src/view/resources/: images.qrc  images.qrc.depends
human_machine_interface/src/view/resources/osg_dataset/: converted.osg  model.osg  model2.osg  pelican.3ds  pelican.x  pelican.xml  pelican2.3ds
human_machine_interface/src/view/resources/osg_dataset/ardrone/: model.dae
human_machine_interface/src/view/ui/: behaviourmanagerviewer.ui  behaviourviewer.ui  cameradisplayoption.ui  cameragridoption.ui  cameramainoption.ui  cameraoneoption.ui  communicationconsole.ui  connection.ui  controlpanel.ui  maincameraoption.ui  mainwindow.ui  onecamera.ui  panelcontrol.ui  parametertemporalseries.ui  perceptionview.ui  performancemonitor.ui  performancemonitorviewer.ui  processmonitor.ui  sixcameraoption.ui  ui_connection.h  ui_displaycameraoption.h  ui_displaycameraoption.ui  ui_gridcameraoption.h  ui_maincameraoption.h  ui_maincameraoption.ui  ui_mainwindow.h  ui_mainwindow.ui  ui_performancemonitor.h  ui_viewparametertemporalseries.h  ui_viewparametertemporalseries.ui  viewparametertemporalseries.ui
human_machine_interface/test/: BMTester.h  bmtester.cpp  mockROSmessages.cpp  mockROSnode.cpp  mockROSnode.h
human_machine_interface/test/dynamicsView/: test_osgQtwrapper.cpp
human_machine_interface/test/perceptionView/: glthread.cpp  glwidget.cpp  main.cpp
human_machine_interface/ui/: cameradisplayoption.ui  connection.ui  fourcameraoption.ui  mainwindow.ui
human_machine_interface/ui/include/: ui_connection.h  ui_dinamicsview.h  ui_fourcameraoption.h  ui_onecamera.h  ui_parametertemporalseries.h  ui_sphereview.h
human_machine_interface/ui/layout-ui/: cameramainoption.ui  cameraoneoption.ui  connection.ui  dinamicsview.ui  fourcameraoption.ui  gridcameraoption.ui  mainwindow.ui  parametertemporalseries.ui  sphereview.ui
installation/: set_environmental_variables.sh
