<?xml version="1.0"?>
<package>
  <name>human_machine_interface</name>
  <version>0.1.0</version>
  <description>

     human_machine_interface

  </description>
  <maintainer email="yolanda93h@gmail.com">Yolanda</maintainer>
  <author>Yolanda</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>droneMsgsROS</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>common</build_depend>
  <build_depend>genmsg</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>droneMsgsROS</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>common</run_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>message_generation</build_depend>
 
</package>
